--- a/res/layout/layout_main_plus_morning.xml
+++ b/res/layout/layout_main_plus_morning.xml
@@ -79,7 +79,7 @@
                         android:id="@+id/tv_meetting_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="叫早人员"
+                        android:text="接收人"
                         android:textStyle="bold" />
 
                     <TextView
@@ -88,7 +88,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/tv_meetting_title"
                         android:layout_marginTop="5dp"
-                        android:text="请点击选择叫早人员"
+                        android:text="请点击选择接收人"
                         android:textColor="#a4a4a4" />
 
                     <TextView
@@ -129,7 +129,7 @@
                             android:layout_alignParentLeft="true"
                             android:layout_centerVertical="true"
                             android:layout_marginLeft="10dp"
-                            android:text="叫早时间"
+                            android:text="时间"
                             android:textColor="@color/simi_color_gray" />
 
                         <TextView
@@ -192,7 +192,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="8dp"
                         android:layout_toRightOf="@id/iv_start_icon"
-                        android:text="叫早内容"
+                        android:text="内容"
                         android:textColor="#676767" />
 
                     <ImageView
