--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -109,12 +109,14 @@
                     <ImageView
                         android:layout_width="@dimen/bottom_bar_icon_width_size"
                         android:layout_height="@dimen/bottom_bar_icon_height_size"
-                        android:src="@drawable/tab_message_bg_selector" />
+                        android:src="@drawable/tab_message_bg_selector" 
+                        
+                        />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="好友"
+                        android:text="圈子"
                         android:paddingTop="@dimen/bottom_padding_top_size"
                         android:textColor="@color/tab_text_color_selector"
                         android:textSize="@dimen/bottom_bar_text_size"
