--- a/res/layout/layout_title_bar.xml
+++ b/res/layout/layout_title_bar.xml
@@ -67,9 +67,6 @@
         android:layout_alignParentRight="true"
         android:layout_gravity="center_vertical"
         android:focusable="true"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:scaleType="centerInside"
         android:visibility="gone" >
 
         <TextView
@@ -77,9 +74,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:background="@drawable/icon_plus_mishuchuli"
             android:textColor="@color/simi_color_red"
-            android:textSize="17.6sp" />
+            android:text="编辑"
+            android:gravity="center"
+            android:textSize="15sp" />
     </RelativeLayout>
 
 </RelativeLayout>
