--- a/res/layout/my_order_list_item.xml
+++ b/res/layout/my_order_list_item.xml
@@ -31,6 +31,7 @@
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:layout_centerVertical="true"
+                   	android:scaleType="fitXY"
                     android:background="@drawable/order_icon" />
 
                 <TextView
