--- a/res/layout/personal_fragment.xml
+++ b/res/layout/personal_fragment.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+     xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fl_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,7 +31,11 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="30dp"
-                    android:src="@drawable/ic_defult_touxiang" />
+                    android:src="@drawable/ic_defult_touxiang" 
+           			imagecontrol:border_inside_color="#f9f9f9"  
+           			imagecontrol:border_outside_color="#f9f9f9"  
+      				imagecontrol:border_thickness_in="2dp" 
+                    />
 
                 <RelativeLayout
                     android:id="@+id/fyzb_personal_page_content"
@@ -38,6 +43,7 @@
                     android:layout_height="95dp"
                     android:layout_below="@id/iv_top_head" >
 
+                    
                     <RelativeLayout
                         android:id="@+id/user_login"
                         android:layout_width="wrap_content"
