--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -70,5 +70,6 @@
     <color name="griditems_bg">#ffe8ecef</color>
     <color name="commo_text_color">#ff333333</color>
     <color name="line">#ffd3dde6</color>
-
+    <!--发现-->
+ 	<color name="find_fav_red_color">#e8374a</color>
 </resources>
