--- a/res/layout/index_3.xml
+++ b/res/layout/index_3.xml
@@ -9,6 +9,8 @@
 
     <!-- 顶部Tab -->
     <include layout="@layout/layout_friend_top_tab" />
+    <!--好友动态-->
+    <include layout="@layout/layout_friend_dynamic" />
     <!-- 好友 -->
     <include layout="@layout/layout_friend" />
     <!-- 消息 -->
