--- a/res/layout/activity_selectimg.xml
+++ b/res/layout/activity_selectimg.xml
@@ -22,6 +22,7 @@
 	       android:src="@drawable/title_left_back"
 	       android:visibility="visible" />
         <TextView
+            android:id="@+id/title_tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
