--- a/res/layout/layout_title_bar.xml
+++ b/res/layout/layout_title_bar.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/title_bar_height"
     android:background="@color/title_background_color"
-    android:gravity="center_vertical" >
+    android:gravity="center_vertical"
+     >
 
     <ImageView
         android:id="@+id/title_btn_left"
@@ -28,7 +29,7 @@
         android:focusable="false"
         android:gravity="center"
         android:singleLine="true"
-        android:text="私密"
+        android:text=""
         android:textColor="@color/title_text_color"
         android:textSize="@dimen/title_bar_text_size" />
     
