--首页标题修改

--- a/res/layout/calendar_layout.xml
+++ b/res/layout/calendar_layout.xml
@@ -4,14 +4,17 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:background="@color/simi_color_red"
+         >
 
         <LinearLayout
             android:id="@+id/header"
             android:layout_width="match_parent"
             android:layout_height="46.7dp"
             android:gravity="center_vertical"
-            android:orientation="horizontal" >
+            android:orientation="horizontal" 
+            >
 
             <RelativeLayout
                 android:layout_width="match_parent"
