--- a/res/color/text_calendar_today.xml
+++ b/res/color/text_calendar_today.xml
@@ -3,19 +3,19 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:lib="http://schemas.android.com/apk/res-auto">
 
-    <item lib:state_current="true"
+   <item lib:state_current="true"
           android:state_enabled="false"
-          android:color="@color/text_light" />
+          android:color="@color/simi_color_red" />  
 
-    <item lib:state_current="true"
+   <item lib:state_current="true"
           android:state_selected="true"
-          android:color="@color/text_normal" />
+          android:color="@color/simi_color_red"  />
 
-<!--     <item lib:state_current="true"
+   <!--  <item lib:state_current="true"
           android:state_pressed="true"
-          android:color="@color/text_normal" />
- -->
+          android:color="@android:color/white" />  -->
+
     <item lib:state_current="true"
-          android:color="@color/text_normal" />
+          android:color="@color/simi_color_red" />
 
 </selector>
