--- a/res/color/text_calendar.xml
+++ b/res/color/text_calendar.xml
@@ -5,17 +5,16 @@
 
     <item lib:state_current="true"
           android:state_enabled="false"
-          android:color="@color/text_light" />
+          android:color="@color/simi_color_black" />
 
     <item lib:state_current="true"
           android:state_selected="true"
-          android:color="@color/text_normal" />
+          android:color="@color/simi_color_black" />
 
-<!--     <item lib:state_current="true"
+	<item lib:state_current="true"
           android:state_pressed="true"
-          android:color="@color/text_normal" />
- -->
+          android:color="@color/simi_color_black" />
     <item lib:state_current="true"
-          android:color="@color/text_normal" />
+          android:color="@color/simi_color_black" />
 
 </selector>
