--- a/res/color/text_calendar_today.xml
+++ b/res/color/text_calendar_today.xml
@@ -11,9 +11,9 @@
           android:state_selected="true"
           android:color="@color/simi_color_red"  />
 
-   <!--  <item lib:state_current="true"
+   <item lib:state_current="true"
           android:state_pressed="true"
-          android:color="@android:color/white" />  -->
+          android:color="@color/simi_color_white" />
 
     <item lib:state_current="true"
           android:color="@color/simi_color_red" />
