--- a/res/layout/calendar_layout.xml
+++ b/res/layout/calendar_layout.xml
@@ -179,4 +179,15 @@
         <include layout="@layout/week_layout" />
     </LinearLayout>
 
+    <RelativeLayout 
+        android:layout_width="match_parent"
+        android:layout_height="12dp"
+        android:background="@android:color/transparent">
+        <ImageView 
+            android:id="@+id/bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="12dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/rili_arrow_down"/>
+    </RelativeLayout>
 </merge>
