--- a/res/layout/index_1.xml
+++ b/res/layout/index_1.xml
@@ -10,13 +10,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </com.meijialife.simi.ui.CollapseCalendarView>
+    
+    <View
+        android:id="@+id/v_line"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_below="@id/layout_calendar"
+        android:background="@color/cut_off_rule" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/layout_calendar"
+        android:layout_below="@id/v_line"
         android:background="@color/activity_bg_color"
         android:orientation="vertical" >
-        
         
         <ImageView
             android:id="@+id/iv_no_card"
