--- a/res/layout/item_friend_dynamic.xml
+++ b/res/layout/item_friend_dynamic.xml
@@ -101,7 +101,9 @@
                 android:id="@+id/iv_more"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp" 
+                
+                />
           
         </LinearLayout>
     </LinearLayout>
