--- a/res/layout/layout_main_plus.xml
+++ b/res/layout/layout_main_plus.xml
@@ -107,7 +107,7 @@
             android:drawablePadding="12dp"
             android:drawableTop="@drawable/icon_plus_6"
             android:gravity="center_horizontal"
-            android:text="更多服务"
+            android:text="发布动态"
             android:textColor="#333333"
             android:textSize="18sp" />
     </LinearLayout>
