--- a/res/layout/person_scroll_view.xml
+++ b/res/layout/person_scroll_view.xml
@@ -49,7 +49,7 @@
                     android:textColor="#929292"
                     android:textStyle="bold"
                     android:layout_alignBaseline="@id/iv_person_tools"
-                    android:visibility="gone"
+                    android:visibility="visible"
                      />
 
                 <ImageView
@@ -60,7 +60,7 @@
                     android:src="@drawable/arrow_right" 
                     android:layout_alignBaseline="@id/iv_person_tools"
                     android:layout_marginTop="2dp"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     />
                
             </RelativeLayout>
